--- a/frontend/src/Pages/Login/style.css
+++ b/frontend/src/Pages/Login/style.css
@@ -16,12 +16,24 @@ body {
   justify-content: space-between;
   flex-direction: row-reverse;
   width: 100%;
+  animation-name: up;
+  animation-duration: 700ms;
 }
 .login-container section.form img {
   width: 60%;
   max-width: 950px;
+  animation-name: up;
+  animation-duration: 1000ms;
 }
-
+@keyframes up {
+  from {
+    opacity: 0;
+    transform: translateY(15px);
+  }
+  to {
+    opacity: 1;
+  }
+}
 .login-container section.form form {
   margin-top: 100px;
 }
@@ -45,6 +57,7 @@ body {
 }
 .login-container section.form form .btnLogin {
   font-weight: bold;
+  font-size: 20px;
   border: none;
   background-color: #c8a2c8;
   padding: 5%;
@@ -53,7 +66,25 @@ body {
   width: 50%;
   color: #fff;
 }
-.login-container section.form form .btnLogin span {
-  color: #fff;
-  font-size: 28px;
+
+.login-container section.form form .LinkRegister {
+  display: flex;
+  align-items: center;
+  margin-top: 40px;
+  color: #41414d;
+  font-size: 18px;
+  text-decoration: none;
+  font-weight: 500;
+}
+.login-container section.form form .LinkRegister .spaceFI {
+  margin: 5px;
+}
+
+@media only screen and (max-width: 600px) {
+  .login-container section.form img {
+    display: none;
+  }
+  .login-container section.form {
+    flex-direction: row;
+  }
 }
