--- a/frontend/src/Pages/Login/style.css
+++ b/frontend/src/Pages/Login/style.css
@@ -19,9 +19,9 @@ body {
   animation-name: up;
   animation-duration: 700ms;
 }
+
 .login-container section.form img {
   width: 60%;
-  max-width: 950px;
   animation-name: up;
   animation-duration: 1000ms;
 }
@@ -34,7 +34,7 @@ body {
     opacity: 1;
   }
 }
-.login-container section.form form {
+.login-container section.form Form {
   margin-top: 100px;
 }
 .login-container section.form form h1 {
@@ -47,12 +47,14 @@ body {
 }
 
 .login-container section.form form .inputLogin {
-  margin-top: 25px;
+  width: 500px;
+  height: 80px;
+  padding: 15px;
   border-width: 3px;
   border-radius: 2px;
   border-top: 0px;
-  border-left: 0px;
   border-right: 0px;
+  border-left: 0px;
   border-color: #c8a2c8;
 }
 .login-container section.form form .btnLogin {
@@ -76,18 +78,20 @@ body {
   text-decoration: none;
   font-weight: 500;
 }
-.login-container section.form form .LinkRegister .spaceFI {
-  margin: 5px;
-}
 
 @media only screen and (max-width: 600px) {
-  p a {
+  p {
     display: none;
+  }
+  .login-container {
+    margin-left: 0px;
   }
   .login-container section.form img {
     display: none;
   }
-  .login-container section.form {
-    padding: 5px;
+
+  .login-container section.form form .inputLogin {
+    width: 370px;
+    height: 80px;
   }
 }
