--- a/frontend/src/Pages/Login/style.css
+++ b/frontend/src/Pages/Login/style.css
@@ -1,6 +1,3 @@
-body {
-  background: #fff;
-}
 .login-container {
   width: 100%;
   max-width: 1120px;
@@ -56,6 +53,7 @@ body {
   border-right: 0px;
   border-left: 0px;
   border-color: #c8a2c8;
+  background-color: #f0f0f5;
 }
 .login-container section.form form .btnLogin {
   font-weight: bold;
